--- a/project0/styles.css
+++ b/project0/styles.css
@@ -1,76 +1,148 @@
-* {
+/* Base */
+
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-family: Helvetica, Arial, sans-serif;
+  background: rgb(115, 255, 152);
+  background: linear-gradient(45deg, rgba(115, 255, 152, 0.8) 49%, rgba(173, 255, 47, 0.6) 100%);
   box-sizing: border-box;
 }
+/* * {
+  border: 1px solid white;
+} */
 
-html,
-body {
-  background-color: #eee;
-  margin: 0;
-  padding: 0;
+/* Header */
+
+.title__header {
+  text-align: center;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
+/* Tracking Section */
 
-.center {
-  align-self: center;
-}
-
-.flow-right {
+.tracking__count {
+  margin-bottom: 2em;
   display: flex;
   justify-content: space-around;
 }
 
-.container {
-  max-width: 800px;
+/* Input Section */
+
+.input {
+  width: 90%;
   margin: 0 auto;
-  padding: 10px;
+  text-align: center;
+}
+
+.input__textInput {
+  display: block;
+  width: 55%;
+  margin: 0 auto;
+  margin-top: 2em;
+  border: none;
+  outline: none;
+  color: rgb(75, 75, 75);
+  background-color: transparent;
+  border-bottom: 1px solid gray;
+}
+
+.input__textInput:focus {
+  border-bottom: 1px solid white;
+}
+
+.input__button {
+  margin-top: 2em;
+  padding: 0.5em 1.5em;
+  border: none;
+  outline: none;
+  background-color: #63fc8c;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 5px 5px 28px -14px rgba(0, 0, 0, 0.75);
+  cursor: pointer;
+}
+
+.input__button:focus {
+  background-color: #63fc8c;
+}
+
+.input__button:active {
+  transform: scale(0.9);
+}
+
+/* List Section */
+
+.list {
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 2em;
+  /* border: 1px solid #adff2f; */
+}
+
+.list__items {
+  margin: 0;
+  padding: 0;
+  padding: 1em;
+}
+
+.list__items_item {
   display: flex;
-  flex-direction: column;
-  background-color: white;
-  height: 100vh;
-}
-
-.title,
-.controls,
-.button {
-  flex: none;
-}
-
-.button {
-  padding: 10px 20px;
-}
-
-.todo-list {
-  flex: 1 1 0;
-  margin-top: 20px;
-  padding: 20px;
-  overflow-y: auto;
-}
-
-.todo-delete {
-  margin: 10px;
-}
-
-.todo-checkbox {
-  margin: 10px;
-}
-
-.todo-container {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  border-bottom: 1px solid #333;
+  justify-content: space-between;
+  list-style-type: none;
+  border: 1px solid cyan;
 }
 
-.todo-container:first-of-type {
-  border-top: 1px solid #333;
+.list__items_item {
+  margin: 1em 0;
 }
 
-.todo-text {
-  display: inline-block;
+.list__items_item:first-of-type {
+  margin-bottom: 1em;
+}
+
+.list__items_item:last-of-type {
+  margin-top: 1em;
+}
+
+.list__items__item_text {
+  margin-left: 0.5em;
+}
+
+/* List Item Buttons */
+
+.list__items__buttons {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.list__items__buttons_delete,
+.list__items__buttons_finished {
+  height: 30px;
+  width: 30px;
+  padding: 0;
+  border: none;
+  outline: none;
+  font-size: 1.25em;
+  font-weight: bold;
+  background-color: red;
+  color: white;
+  margin-right: 0.5em;
+  cursor: pointer;
+}
+
+.list__items__buttons_finished {
+  font-size: 1.25em;
+  background-color: rgb(0, 214, 0);
+}
+
+.list__items__buttons_delete:active,
+.list__items__buttons_finished:active {
+  transform: scale(0.95);
 }
